# dz_DRF

./: .coverage  .env  .env.sample  Dockerfile  README.md  data.json  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
university/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
university/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_alter_lesson_video_url.py  0004_remove_lesson_course_lesson_course.py  0005_remove_lesson_course_lesson_course.py  0006_alter_lesson_course.py  0007_remove_lesson_course_lesson_course.py  0008_course_owner_lesson_owner.py  0009_course_price_lesson_price.py  0010_course_stripe_id_lesson_stripe_id.py  0011_course_stripe_price_lesson_stripe_price.py  0012_rename_stripe_price_course_stripe_price_id_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_country_and_more.py  0003_remove_user_is_content_manager_alter_user_avatar_and_more.py  0004_pay.py  0005_alter_pay_options.py  0006_alter_pay_payment_method.py  0007_alter_pay_payment_method.py  0008_alter_pay_paid_course_alter_pay_paid_lesson_and_more.py  0009_alter_pay_payment_method.py  0010_alter_pay_payment_method_subscription.py  0011_pay_status_paid_pay_url_paid.py  0012_alter_pay_payment_method.py  0013_alter_pay_payment_method_alter_pay_url_paid.py  0014_rename_user_pay_owner.py  0015_alter_pay_payment_method.py  0016_alter_user_last_login.py  (+2 more)
(+1 files in other folders)
